--- a/src/note.css
+++ b/src/note.css
@@ -197,16 +197,30 @@
     background-color: black;
 }
 
-#title h2{
+#title {
+    display:flex;
+    justify-content: center;
+}
+
+#title input{
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 80%;
     height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
+    font-weight: bold;
+    border: none;
+    text-align: center;
+    padding:2rem;
+    border-radius: 1rem;
+}
+
+#title input:hover{
+    border: 1px solid black;
 }
 
 .page {
@@ -224,16 +238,19 @@
     /* width: 100%; */
     border-radius: 2rem;
     padding: 1rem;
+    font-size: 1.5rem;
+    overflow-x: hidden;
 }
 
 .page .text{
     width: 100%;
     margin: 1rem;
     width: 100%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 2rem;
     padding: 1rem;
 }
+
 
 #body {
     width: 100%;
@@ -246,7 +263,7 @@
 /* css for the component of the site */
 #tiblits{
     width: 95%;
-    height: 75%;
+    height: 78%;
     bottom: 0rem;
     position: absolute;
     display: flex;
@@ -260,15 +277,48 @@
 }
 
 #tiblits #cart{
-    width: 100%;
-    height: 100%;
+    
+    min-width: 40rem;
+    min-height: 70vh;
+
+    width: 80%;
+    height: 90%;
+
+    max-width: 40rem;
+    max-height: 70vh;
+
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     overflow: hidden;
     border: 2px solid black;
     border-radius: 2rem;
+}
+
+#tiblits #cart .aisle{
+    /* width: 95%; */
+    height: 2rem;
+    margin: 0.5rem 1rem 0rem 1rem;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    overflow: hidden;
+    /* border: 1px solid black; */
+    padding: 0.5rem;
+}
+
+#tiblits #cart .aisle .jot{
+    height:1rem;
+    border: 2px solid black;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    /* inline-size: auto; */
+    margin: 0rem 0.5rem 0rem 0rem;
+    transition: 0.5s;
 }
 
 
@@ -296,4 +346,22 @@
     width: 2rem;
     border: 2px solid black;
     border-radius: 2rem;
+    transition: 0.3s;
+    cursor: pointer;
 }
+
+/* #body #footer #quick-bar #quick-btn1:hover{
+    background-color:#ffb3ba;
+}
+#body #footer #quick-bar #quick-btn2:hover{
+    background-color:#ffdfba;
+}
+#body #footer #quick-bar #quick-btn3:hover{
+    background-color:#ffffba;
+}
+#body #footer #quick-bar #quick-btn4:hover{
+    background-color:#baffc9;
+}
+#body #footer #quick-bar #quick-btn5:hover{
+    background-color:#bae1ff;
+} */
